--- a/templates/eua-header.xhtml
+++ b/templates/eua-header.xhtml
@@ -1,4 +1,6 @@
       <div id="header">
+        <h1 class="apartment_name">Apartment Name</h1>
+        <mgd:include>eua-languages</mgd:include>
+        <mgd:include>eua-banner</mgd:include>
         <mgd:include>eua-navigation</mgd:include>
-        <mgd:include>loginbox</mgd:include>
       </div>
