--- a/templates/ROOT.xhtml
+++ b/templates/ROOT.xhtml
@@ -1,5 +1,10 @@
-<!DOCTYPE HTML PUBLIC"-// W3C//DTD HTML 4.01//EN"" http://www.w3.org/TR/html4/strict.dtd">
-<html>
+<!DOCTYPE html>
+<html version="XHTML+RDFa 1.0"
+      xmlns:mgd="http://www.midgard-project.org/midgard2/9.03"
+      xmlns:foaf="http://xmlns.com/foaf/0.1/"
+      xmlns:doap="http://usefulinc.com/ns/doap#"
+      xmlns:sioc="http://rdfs.org/sioc/ns#"
+      xmlns:dcterms="http://purl.org/dc/terms/">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 
