--- a/templates/eua-header.xhtml
+++ b/templates/eua-header.xhtml
@@ -1,6 +1,9 @@
       <div id="header">
-        <h1 class="apartment_name">Apartment Name</h1>
+        <tal:block tal:define="apartment current_component/apartment">
+            <h1 tal:content="apartment/title" tal:attributes="property apartment/rdfmapper/title">apartment Title</h1>
+        </tal:block>
         <mgd:include>eua-languages</mgd:include>
         <mgd:include>eua-banner</mgd:include>
         <mgd:include>eua-navigation</mgd:include>
       </div>
+
