--- a/templates/ROOT.xhtml
+++ b/templates/ROOT.xhtml
@@ -7,19 +7,15 @@
       xmlns:dcterms="http://purl.org/dc/terms/">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-
     <title i18n:domain="default" i18n:translate="'welcome'"></title>
     <link href="/midgardmvc-static/eu_urho_apartments/css/apartments.css" rel="stylesheet" type="text/css" media="screen"/>
+    <link type="text/css" rel="stylesheet" href="/midgardmvc-static/eu_urho_apartments/css/custom-theme/jquery-ui-1.8.6.custom.css" />
     <tal:block tal:replace="php: MIDCOM.head.print_elements()" />
   </head>
   <body>
     <mgd:include>eua-header</mgd:include>
     <mgd:include>eua-breadcrumb</mgd:include>
-
-    <div id="content">
-      <mgd:include>content</mgd:include>
-    </div>
-
+    <mgd:include>content</mgd:include>
     <mgd:include>eua-footer</mgd:include>
     <mgd:include>eua-analytics</mgd:include>
   </body>
