--- a/templates/ROOT.xhtml
+++ b/templates/ROOT.xhtml
@@ -13,7 +13,7 @@
     <tal:block tal:replace="php: MIDCOM.head.print_elements()" />
   </head>
   <body>
-    <mgd:include>eua-header</mgd:include>
+    <mgd:include>header</mgd:include>
     <mgd:include>eua-breadcrumb</mgd:include>
     <mgd:include>content</mgd:include>
     <mgd:include>eua-footer</mgd:include>
