--- a/templates/eua-header.xhtml
+++ b/templates/eua-header.xhtml
@@ -1,7 +1,6 @@
       <div id="header">
         <h1 class="company" tal:content="company">Configurable Company Name</h1>
         <mgd:include>eua-languages</mgd:include>
-        <mgd:include>eua-banner</mgd:include>
-        <mgd:include>eua-navigation</mgd:include>
+        <mgd:include>banner</mgd:include>
       </div>
 
