string id changed

--- a/templates/eua-footer.xhtml
+++ b/templates/eua-footer.xhtml
@@ -1,4 +1,4 @@
 <div id="footer">
-  <div class="poweredby" i18n:translate="structure 'powered_by'"></div>
+  <div class="poweredby" i18n:translate="structure 'powered by'"></div>
   <div class="feedback" i18n:translate="structure 'feedback'"></div>
 </div>
