--- a/templates/eua-languages.xhtml
+++ b/templates/eua-languages.xhtml
@@ -1,5 +1,5 @@
 <div id="languages">
-  <span class="language"><a class="hu" href="?lang=hu"></a></span>
-  <span class="language"><a class="en" href="?lang=en"></a></span>
-  <span class="language"><a class="bg" href="?lang=bg"></a></span>
+  <span class="language"><a class="hu" href="?lang=hu_HU"></a></span>
+  <span class="language"><a class="en" href="?lang=en_US"></a></span>
+  <span class="language"><a class="bg" href="?lang=bg_BG"></a></span>
 </div>
